--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Simple CSV Report - Akash D. Dilwale",
   "main": "index.js",
+  "homepage": "https://github.com/AkkiTester/PostmanCSV_Report.git",
+  "bugs": "https://github.com/AkkiTester/PostmanCSV_Report.git/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AkkiTester/PostmanCSV_Report.git"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
