npm ERR! code ERESOLVE <7.0.0

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Akash Dilwale",
   "license": "Akash Dilwale",
   "dependencies": {
-    "newman": "*"
+    "newman": "<7.0.0"
   }
 }
 
