--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newman-reporter-csvsimple",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Simple CSV Report - Akash D. Dilwale",
   "main": "index.js",
   "homepage": "https://github.com/AkkiTester/PostmanCSV_Report.git",
@@ -22,7 +22,7 @@
   "author": "Akash Dilwale",
   "license": "Akash Dilwale",
   "dependencies": {
-    "newman": "<7.0.0"
+    "newman": "^7.0.0"
   }
 }
 
