--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Akash Dilwale",
   "license": "Akash Dilwale",
   "dependencies": {
-    "newman": "^7.0.0"
+    "newman": "^^6.1.0"
   }
 }
 
